# tppe

./: .env.example  .flake8  .gitignore  Dockerfile  README.md  comandos.md  cookies.txt  docker-compose.yml  lint.sh  pyproject.toml  seed.py  setup.cfg
app/: __init__.py  models.py  utils.py
app/routes/: auth.py  dashboard.py  servicos.py  usuarios.py  veiculos.py  views.py
app/static/css/: style.css
app/templates/: base.html  dashboard_cliente.html  dashboard_gerente.html  dashboard_mecanico.html  login.html  register.html  servico_detail.html  servico_form.html  servico_solicitar.html  servicos_list.html  usuario_form.html  usuarios_list.html  veiculo_detail.html  veiculo_form.html  veiculos_list.html
backend/: Dockerfile  requirements.txt
backend/app/: __init__.py  models.py  utils.py
backend/app/routes/: auth.py  dashboard.py  views.py  (+3 more)
backend/tests/: conftest.py  test_auth.py  test_e2e_selenium.py  test_integration.py  test_models.py  test_parametrized.py  test_servicos.py  test_usuarios.py  test_veiculos.py
docs/: ARQUITETURA.md  BACKLOG.md  CASOS_DE_USO.md  DIAGRAMA_CLASSES.md  ER_FISICO.md
frontend/: Dockerfile  nginx.conf
frontend/templates/: dashboard_cliente.html  dashboard_gerente.html  dashboard_mecanico.html  landing.html  login.html  register.html  servico_detail.html  servico_form.html  servicos_list.html  usuario_form.html  usuarios_list.html  veiculo_form.html  veiculos_list.html
migrations/versions/: a57b350666f6_add_new_columns.py
tests/: conftest.py  test_integration.py  test_parametrized.py  test_servicos.py  test_veiculos.py
(+2 files in other folders)
